# hive

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HIVE_BUILD_PLAN.md  META_REPORT.md  README.md  SECURITY.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
backend/: detection.py  main.py  models.py  models_local.py  onboarding.py  resources.py
backend/api/: cost_http.py  detection_http.py  event_bus.py  http.py  install_http.py  lessons_http.py  lifecycle_http.py  mcp_http.py  meta_http.py  models_http.py  pipelines_http.py  preflight_http.py  registries_http.py  safety_http.py  schemas.py  security_http.py  skills_search_http.py  summarizer_http.py  trajectory_http.py  usage_http.py  validation_http.py  ws.py
backend/golden/: __init__.py  runner.py
backend/guard/: pretooluse_guard.py
backend/lessons/: __init__.py  distiller.py  service.py  store.py
backend/llm/: __init__.py  haiku.py  local.py
backend/mcp/: __init__.py  catalog.py  doctor.py
backend/meta/: __init__.py  analyzer.py
backend/orchestrator/: compaction.py  conflict_resolvers.py  estimator.py  graph.py  plan_gate.py  state.py  task_router.py
backend/persistence/: db.py  events.py  recovery.py
backend/pipelines/: scheduler.py  store.py
cli/: hive.py
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.prod.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE_REVIEW_2026-07.md  E4_LOCAL_QUALITY_COMPARISON.md  OPTIONAL_INTEGRATIONS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
golden/: README.md  ambiguous-task.yaml  docs-only.yaml  flask-todo-api.yaml  lessons-injection.yaml  local-multifile-refactor.yaml  multi-file-python.yaml  palette-playwright.yaml  snake-game.yaml  three-wave-chain.yaml  tiny-fix.yaml
hive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
packaging/: BUILD.md  entrypoint.py  hive-backend.spec
scripts/: launch-hive.ps1  start-hive-backend.sh  stop-hive-wsl.sh  stop-hive.ps1
tests/: conftest.py
(+220 files in other folders)
