[project]
name = "hive"
version = "0.1.0"
description = "AI agent swarm orchestration on top of Claude Code CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "aiogram>=3.4.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
hive = "cli.hive:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "cli*"]
