[package]
name = "hive"
version = "1.0.0"
description = "HIVE — AI agent swarm desktop app"
authors = ["HIVE"]
edition = "2021"

[lib]
name = "hive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` enables `tauri::tray::{TrayIconBuilder, …}` and the `tray_by_id`
# method on AppHandle that lib.rs uses for the system tray (Phase 9D-B).
# `image-png` is needed because TrayIconBuilder::with_icon expects a PNG
# image; without it `default_window_icon()` returns a no-image stub on Windows.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

# Some tauri-build code paths (notably the Windows resource emitter) read the
# icon list from Cargo's [package.metadata.bundle] block instead of
# tauri.conf.json. Mirroring it here is cheap insurance — without it you get
# "package.metadata does not exist; icons/icon.ico not found" on Windows.
[package.metadata.bundle]
identifier = "ai.hive.desktop"
icon = [
    "icons/32x32.png",
    "icons/128x128.png",
    "icons/128x128@2x.png",
    "icons/icon.icns",
    "icons/icon.ico",
]
